// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomePage /> "Make a Poll" Btn renders properly 1`] = `
<Btn
  onClick={[MockFunction]}
  size="large"
  text="Make a Poll"
>
  <WithStyles(Tooltip)
    id="tooltip-icon"
    title=""
  >
    <Tooltip
      classes={
        Object {
          "open": "MuiTooltip-open-117",
          "popper": "MuiTooltip-popper-116",
          "tooltip": "MuiTooltip-tooltip-118",
          "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom-123",
          "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft-120",
          "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight-121",
          "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop-122",
          "touch": "MuiTooltip-touch-119",
        }
      }
      disableFocusListener={false}
      disableHoverListener={false}
      disableTouchListener={false}
      enterDelay={0}
      enterTouchDelay={1000}
      id="tooltip-icon"
      leaveDelay={0}
      leaveTouchDelay={1500}
      placement="bottom"
      theme={
        Object {
          "breakpoints": Object {
            "between": [Function],
            "down": [Function],
            "keys": Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ],
            "only": [Function],
            "up": [Function],
            "values": Object {
              "lg": 1280,
              "md": 960,
              "sm": 600,
              "xl": 1920,
              "xs": 0,
            },
            "width": [Function],
          },
          "direction": "ltr",
          "mixins": Object {
            "gutters": [Function],
            "toolbar": Object {
              "@media (min-width:0px) and (orientation: landscape)": Object {
                "minHeight": 48,
              },
              "@media (min-width:600px)": Object {
                "minHeight": 64,
              },
              "minHeight": 56,
            },
          },
          "overrides": Object {},
          "palette": Object {
            "action": Object {
              "active": "rgba(0, 0, 0, 0.54)",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "disabledBackground": "rgba(0, 0, 0, 0.12)",
              "hover": "rgba(0, 0, 0, 0.08)",
              "hoverOpacity": 0.08,
              "selected": "rgba(0, 0, 0, 0.14)",
            },
            "augmentColor": [Function],
            "background": Object {
              "default": "#fafafa",
              "paper": "#fff",
            },
            "common": Object {
              "black": "#000",
              "white": "#fff",
            },
            "contrastThreshold": 3,
            "divider": "rgba(0, 0, 0, 0.12)",
            "error": Object {
              "contrastText": "#fff",
              "dark": "#d32f2f",
              "light": "#e57373",
              "main": "#f44336",
            },
            "getContrastText": [Function],
            "grey": Object {
              "100": "#f5f5f5",
              "200": "#eeeeee",
              "300": "#e0e0e0",
              "400": "#bdbdbd",
              "50": "#fafafa",
              "500": "#9e9e9e",
              "600": "#757575",
              "700": "#616161",
              "800": "#424242",
              "900": "#212121",
              "A100": "#d5d5d5",
              "A200": "#aaaaaa",
              "A400": "#303030",
              "A700": "#616161",
            },
            "primary": Object {
              "contrastText": "#fff",
              "dark": "#303f9f",
              "light": "#7986cb",
              "main": "#3f51b5",
            },
            "secondary": Object {
              "contrastText": "#fff",
              "dark": "#c51162",
              "light": "#ff4081",
              "main": "#f50057",
            },
            "text": Object {
              "disabled": "rgba(0, 0, 0, 0.38)",
              "hint": "rgba(0, 0, 0, 0.38)",
              "primary": "rgba(0, 0, 0, 0.87)",
              "secondary": "rgba(0, 0, 0, 0.54)",
            },
            "tonalOffset": 0.2,
            "type": "light",
          },
          "props": Object {},
          "shadows": Array [
            "none",
            "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
            "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
            "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
            "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
            "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
            "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
            "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
            "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
            "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
            "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
            "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
            "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
            "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
            "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
          ],
          "spacing": Object {
            "unit": 8,
          },
          "transitions": Object {
            "create": [Function],
            "duration": Object {
              "complex": 375,
              "enteringScreen": 225,
              "leavingScreen": 195,
              "short": 250,
              "shorter": 200,
              "shortest": 150,
              "standard": 300,
            },
            "easing": Object {
              "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
              "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
              "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
            },
            "getAutoHeightDuration": [Function],
          },
          "typography": Object {
            "body1": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 400,
              "lineHeight": "1.46429em",
            },
            "body2": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "lineHeight": "1.71429em",
            },
            "button": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "textTransform": "uppercase",
            },
            "caption": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
              "lineHeight": "1.375em",
            },
            "display1": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.125rem",
              "fontWeight": 400,
              "lineHeight": "1.20588em",
            },
            "display2": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.8125rem",
              "fontWeight": 400,
              "lineHeight": "1.06667em",
              "marginLeft": "-.02em",
            },
            "display3": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "3.5rem",
              "fontWeight": 400,
              "letterSpacing": "-.02em",
              "lineHeight": "1.30357em",
              "marginLeft": "-.02em",
            },
            "display4": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "7rem",
              "fontWeight": 300,
              "letterSpacing": "-.04em",
              "lineHeight": "1.14286em",
              "marginLeft": "-.04em",
            },
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": 14,
            "fontWeightLight": 300,
            "fontWeightMedium": 500,
            "fontWeightRegular": 400,
            "headline": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.5rem",
              "fontWeight": 400,
              "lineHeight": "1.35417em",
            },
            "pxToRem": [Function],
            "round": [Function],
            "subheading": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
              "lineHeight": "1.5em",
            },
            "title": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.3125rem",
              "fontWeight": 500,
              "lineHeight": "1.16667em",
            },
          },
          "zIndex": Object {
            "appBar": 1100,
            "drawer": 1200,
            "mobileStepper": 1000,
            "modal": 1300,
            "snackbar": 1400,
            "tooltip": 1500,
          },
        }
      }
      title=""
    >
      <Manager
        tag={false}
      >
        <EventListener
          onResize={[Function]}
          target="window"
        />
        <Target>
          <RootRef
            rootRef={[Function]}
          >
            <WithStyles(Typography)
              aria-describedby="tooltip-icon"
              component="div"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              style={Object {}}
            >
              <Typography
                align="inherit"
                aria-describedby="tooltip-icon"
                classes={
                  Object {
                    "alignCenter": "MuiTypography-alignCenter-105",
                    "alignJustify": "MuiTypography-alignJustify-107",
                    "alignLeft": "MuiTypography-alignLeft-104",
                    "alignRight": "MuiTypography-alignRight-106",
                    "body1": "MuiTypography-body1-101",
                    "body2": "MuiTypography-body2-100",
                    "button": "MuiTypography-button-103",
                    "caption": "MuiTypography-caption-102",
                    "colorError": "MuiTypography-colorError-115",
                    "colorInherit": "MuiTypography-colorInherit-111",
                    "colorPrimary": "MuiTypography-colorPrimary-112",
                    "colorSecondary": "MuiTypography-colorSecondary-113",
                    "colorTextSecondary": "MuiTypography-colorTextSecondary-114",
                    "display1": "MuiTypography-display1-96",
                    "display2": "MuiTypography-display2-95",
                    "display3": "MuiTypography-display3-94",
                    "display4": "MuiTypography-display4-93",
                    "gutterBottom": "MuiTypography-gutterBottom-109",
                    "headline": "MuiTypography-headline-97",
                    "noWrap": "MuiTypography-noWrap-108",
                    "paragraph": "MuiTypography-paragraph-110",
                    "root": "MuiTypography-root-92",
                    "subheading": "MuiTypography-subheading-99",
                    "title": "MuiTypography-title-98",
                  }
                }
                color="default"
                component="div"
                gutterBottom={false}
                headlineMapping={
                  Object {
                    "body1": "p",
                    "body2": "aside",
                    "display1": "h1",
                    "display2": "h1",
                    "display3": "h1",
                    "display4": "h1",
                    "headline": "h1",
                    "subheading": "h3",
                    "title": "h2",
                  }
                }
                noWrap={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                paragraph={false}
                style={Object {}}
                variant="body1"
              >
                <div
                  aria-describedby="tooltip-icon"
                  className="MuiTypography-root-92 MuiTypography-body1-101"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  style={Object {}}
                >
                  <WithStyles(Button)
                    className=""
                    color="primary"
                    disabled={false}
                    onClick={[MockFunction]}
                    size="large"
                    style={Object {}}
                    variant="raised"
                  >
                    <Button
                      className=""
                      classes={
                        Object {
                          "colorInherit": "MuiButton-colorInherit-129",
                          "disabled": "MuiButton-disabled-134",
                          "fab": "MuiButton-fab-135",
                          "flatPrimary": "MuiButton-flatPrimary-126",
                          "flatSecondary": "MuiButton-flatSecondary-127",
                          "focusVisible": "MuiButton-focusVisible-133",
                          "fullWidth": "MuiButton-fullWidth-139",
                          "label": "MuiButton-label-125",
                          "mini": "MuiButton-mini-136",
                          "outlined": "MuiButton-outlined-128",
                          "raised": "MuiButton-raised-130",
                          "raisedPrimary": "MuiButton-raisedPrimary-131",
                          "raisedSecondary": "MuiButton-raisedSecondary-132",
                          "root": "MuiButton-root-124",
                          "sizeLarge": "MuiButton-sizeLarge-138",
                          "sizeSmall": "MuiButton-sizeSmall-137",
                        }
                      }
                      color="primary"
                      component="button"
                      disableFocusRipple={false}
                      disabled={false}
                      fullWidth={false}
                      mini={false}
                      onClick={[MockFunction]}
                      size="large"
                      style={Object {}}
                      type="button"
                      variant="raised"
                    >
                      <WithStyles(ButtonBase)
                        className="MuiButton-root-124 MuiButton-raised-130 MuiButton-raisedPrimary-131 MuiButton-sizeLarge-138"
                        component="button"
                        disabled={false}
                        focusRipple={true}
                        focusVisibleClassName="MuiButton-focusVisible-133"
                        onClick={[MockFunction]}
                        style={Object {}}
                        type="button"
                      >
                        <ButtonBase
                          centerRipple={false}
                          className="MuiButton-root-124 MuiButton-raised-130 MuiButton-raisedPrimary-131 MuiButton-sizeLarge-138"
                          classes={
                            Object {
                              "disabled": "MuiButtonBase-disabled-141",
                              "focusVisible": "MuiButtonBase-focusVisible-142",
                              "root": "MuiButtonBase-root-140",
                            }
                          }
                          component="button"
                          disableRipple={false}
                          disabled={false}
                          focusRipple={true}
                          focusVisibleClassName="MuiButton-focusVisible-133"
                          onClick={[MockFunction]}
                          style={Object {}}
                          tabIndex="0"
                          type="button"
                        >
                          <button
                            className="MuiButtonBase-root-140 MuiButton-root-124 MuiButton-raised-130 MuiButton-raisedPrimary-131 MuiButton-sizeLarge-138"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[MockFunction]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            style={Object {}}
                            tabIndex="0"
                            type="button"
                          >
                            <span
                              className="MuiButton-label-125"
                            >
                              Make a Poll
                            </span>
                            <WithStyles(TouchRipple)
                              center={false}
                              innerRef={[Function]}
                            >
                              <TouchRipple
                                center={false}
                                classes={
                                  Object {
                                    "child": "MuiTouchRipple-child-147",
                                    "childLeaving": "MuiTouchRipple-childLeaving-148",
                                    "childPulsate": "MuiTouchRipple-childPulsate-149",
                                    "ripple": "MuiTouchRipple-ripple-144",
                                    "ripplePulsate": "MuiTouchRipple-ripplePulsate-146",
                                    "rippleVisible": "MuiTouchRipple-rippleVisible-145",
                                    "root": "MuiTouchRipple-root-143",
                                  }
                                }
                              >
                                <TransitionGroup
                                  childFactory={[Function]}
                                  className="MuiTouchRipple-root-143"
                                  component="span"
                                  enter={true}
                                  exit={true}
                                >
                                  <span
                                    className="MuiTouchRipple-root-143"
                                  />
                                </TransitionGroup>
                              </TouchRipple>
                            </WithStyles(TouchRipple)>
                          </button>
                        </ButtonBase>
                      </WithStyles(ButtonBase)>
                    </Button>
                  </WithStyles(Button)>
                </div>
              </Typography>
            </WithStyles(Typography)>
          </RootRef>
        </Target>
        <Portal>
          <Portal
            containerInfo={
              <body>
                <div
                  class="app"
                  id="app"
                >
                  <div
                    class="MuiGrid-container-1 MuiGrid-direction-xs-column-4 MuiGrid-align-items-xs-center-9 MuiGrid-justify-xs-center-18 home-page"
                  >
                    <span
                      class="background-image"
                      style="background-image: url(www.google.com);"
                    >
                      <span
                        class="background-backdrop"
                      />
                    </span>
                    <div
                      class="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-sm-12-52 home-page-title grid-item"
                    >
                      <h1
                        class="MuiTypography-root-92 MuiTypography-headline-97 MuiTypography-colorInherit-111"
                      >
                        Welcome to Voting Redux!
                      </h1>
                    </div>
                    <div
                      class="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-sm-12-52 home-page-btn grid-item"
                    >
                      <div
                        aria-describedby="tooltip-icon"
                        class="MuiTypography-root-92 MuiTypography-body1-101"
                      >
                        <button
                          class="MuiButtonBase-root-140 MuiButton-root-124 MuiButton-raised-130 MuiButton-raisedPrimary-131 MuiButton-sizeLarge-138"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label-125"
                          >
                            Make a Poll
                          </span>
                          <span
                            class="MuiTouchRipple-root-143"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-sm-12-52 home-page-subtitle grid-item"
                    >
                      <h3
                        class="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                      >
                        or you can
                        <span
                          aria-describedby="tooltip-icon"
                          class="MuiTypography-root-92 MuiTypography-body1-101"
                          style="display: inline-block;"
                        >
                          <button
                            class="MuiButtonBase-root-140 MuiButton-root-124 MuiButton-flatPrimary-126 MuiButton-sizeSmall-137 own-polls"
                            style="padding-bottom: 10px;"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label-125"
                            >
                               own your polls 
                            </span>
                            <span
                              class="MuiTouchRipple-root-143"
                            />
                          </button>
                        </span>
                        or
                        <span
                          aria-describedby="tooltip-icon"
                          class="MuiTypography-root-92 MuiTypography-body1-101"
                          style="display: inline-block;"
                        >
                          <a
                            class="MuiButtonBase-root-140 MuiButton-root-124 MuiButton-flatPrimary-126 MuiButton-sizeSmall-137 view-polls flat"
                            href="/polls"
                            role="button"
                            style="padding-bottom: 10px;"
                            tabindex="0"
                          >
                            <span
                              class="MuiButton-label-125"
                            >
                               view polls
                            </span>
                            <span
                              class="MuiTouchRipple-root-143"
                            />
                          </a>
                        </span>
                      </h3>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiTooltip-popper-116"
                  style="position: absolute; pointer-events: none; opacity: 0; top: 0px; left: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
                    id="tooltip-icon"
                    role="tooltip"
                  />
                </div>
                <div
                  class="MuiTooltip-popper-116"
                  style="position: absolute; pointer-events: none; opacity: 0; top: 0px; left: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
                    id="tooltip-icon"
                    role="tooltip"
                  />
                </div>
                <div
                  class="MuiTooltip-popper-116"
                  style="position: absolute; pointer-events: none; opacity: 0; top: 0px; left: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
                    id="tooltip-icon"
                    role="tooltip"
                  />
                </div>
              </body>
            }
          >
            <Popper
              className="MuiTooltip-popper-116"
              component="div"
              eventsEnabled={false}
              modifiers={Object {}}
              placement="bottom"
              positionFixed={false}
            >
              <div
                className="MuiTooltip-popper-116"
                style={
                  Object {
                    "left": 0,
                    "opacity": 0,
                    "pointerEvents": "none",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <div
                  aria-hidden={true}
                  className="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
                  id="tooltip-icon"
                  role="tooltip"
                />
              </div>
            </Popper>
          </Portal>
        </Portal>
      </Manager>
    </Tooltip>
  </WithStyles(Tooltip)>
</Btn>
`;

exports[`<HomePage /> subtitle "own your polls" Btn renders properly 1`] = `
<Btn
  className="own-polls"
  onClick={[MockFunction]}
  size="small"
  span={true}
  style={
    Object {
      "paddingBottom": 10,
    }
  }
  text=" own your polls "
  variant="flat"
>
  <WithStyles(Tooltip)
    id="tooltip-icon"
    title=""
  >
    <Tooltip
      classes={
        Object {
          "open": "MuiTooltip-open-117",
          "popper": "MuiTooltip-popper-116",
          "tooltip": "MuiTooltip-tooltip-118",
          "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom-123",
          "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft-120",
          "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight-121",
          "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop-122",
          "touch": "MuiTooltip-touch-119",
        }
      }
      disableFocusListener={false}
      disableHoverListener={false}
      disableTouchListener={false}
      enterDelay={0}
      enterTouchDelay={1000}
      id="tooltip-icon"
      leaveDelay={0}
      leaveTouchDelay={1500}
      placement="bottom"
      theme={
        Object {
          "breakpoints": Object {
            "between": [Function],
            "down": [Function],
            "keys": Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ],
            "only": [Function],
            "up": [Function],
            "values": Object {
              "lg": 1280,
              "md": 960,
              "sm": 600,
              "xl": 1920,
              "xs": 0,
            },
            "width": [Function],
          },
          "direction": "ltr",
          "mixins": Object {
            "gutters": [Function],
            "toolbar": Object {
              "@media (min-width:0px) and (orientation: landscape)": Object {
                "minHeight": 48,
              },
              "@media (min-width:600px)": Object {
                "minHeight": 64,
              },
              "minHeight": 56,
            },
          },
          "overrides": Object {},
          "palette": Object {
            "action": Object {
              "active": "rgba(0, 0, 0, 0.54)",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "disabledBackground": "rgba(0, 0, 0, 0.12)",
              "hover": "rgba(0, 0, 0, 0.08)",
              "hoverOpacity": 0.08,
              "selected": "rgba(0, 0, 0, 0.14)",
            },
            "augmentColor": [Function],
            "background": Object {
              "default": "#fafafa",
              "paper": "#fff",
            },
            "common": Object {
              "black": "#000",
              "white": "#fff",
            },
            "contrastThreshold": 3,
            "divider": "rgba(0, 0, 0, 0.12)",
            "error": Object {
              "contrastText": "#fff",
              "dark": "#d32f2f",
              "light": "#e57373",
              "main": "#f44336",
            },
            "getContrastText": [Function],
            "grey": Object {
              "100": "#f5f5f5",
              "200": "#eeeeee",
              "300": "#e0e0e0",
              "400": "#bdbdbd",
              "50": "#fafafa",
              "500": "#9e9e9e",
              "600": "#757575",
              "700": "#616161",
              "800": "#424242",
              "900": "#212121",
              "A100": "#d5d5d5",
              "A200": "#aaaaaa",
              "A400": "#303030",
              "A700": "#616161",
            },
            "primary": Object {
              "contrastText": "#fff",
              "dark": "#303f9f",
              "light": "#7986cb",
              "main": "#3f51b5",
            },
            "secondary": Object {
              "contrastText": "#fff",
              "dark": "#c51162",
              "light": "#ff4081",
              "main": "#f50057",
            },
            "text": Object {
              "disabled": "rgba(0, 0, 0, 0.38)",
              "hint": "rgba(0, 0, 0, 0.38)",
              "primary": "rgba(0, 0, 0, 0.87)",
              "secondary": "rgba(0, 0, 0, 0.54)",
            },
            "tonalOffset": 0.2,
            "type": "light",
          },
          "props": Object {},
          "shadows": Array [
            "none",
            "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
            "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
            "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
            "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
            "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
            "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
            "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
            "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
            "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
            "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
            "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
            "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
            "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
            "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
          ],
          "spacing": Object {
            "unit": 8,
          },
          "transitions": Object {
            "create": [Function],
            "duration": Object {
              "complex": 375,
              "enteringScreen": 225,
              "leavingScreen": 195,
              "short": 250,
              "shorter": 200,
              "shortest": 150,
              "standard": 300,
            },
            "easing": Object {
              "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
              "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
              "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
            },
            "getAutoHeightDuration": [Function],
          },
          "typography": Object {
            "body1": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 400,
              "lineHeight": "1.46429em",
            },
            "body2": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "lineHeight": "1.71429em",
            },
            "button": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "textTransform": "uppercase",
            },
            "caption": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
              "lineHeight": "1.375em",
            },
            "display1": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.125rem",
              "fontWeight": 400,
              "lineHeight": "1.20588em",
            },
            "display2": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.8125rem",
              "fontWeight": 400,
              "lineHeight": "1.06667em",
              "marginLeft": "-.02em",
            },
            "display3": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "3.5rem",
              "fontWeight": 400,
              "letterSpacing": "-.02em",
              "lineHeight": "1.30357em",
              "marginLeft": "-.02em",
            },
            "display4": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "7rem",
              "fontWeight": 300,
              "letterSpacing": "-.04em",
              "lineHeight": "1.14286em",
              "marginLeft": "-.04em",
            },
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": 14,
            "fontWeightLight": 300,
            "fontWeightMedium": 500,
            "fontWeightRegular": 400,
            "headline": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.5rem",
              "fontWeight": 400,
              "lineHeight": "1.35417em",
            },
            "pxToRem": [Function],
            "round": [Function],
            "subheading": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
              "lineHeight": "1.5em",
            },
            "title": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.3125rem",
              "fontWeight": 500,
              "lineHeight": "1.16667em",
            },
          },
          "zIndex": Object {
            "appBar": 1100,
            "drawer": 1200,
            "mobileStepper": 1000,
            "modal": 1300,
            "snackbar": 1400,
            "tooltip": 1500,
          },
        }
      }
      title=""
    >
      <Manager
        tag={false}
      >
        <EventListener
          onResize={[Function]}
          target="window"
        />
        <Target>
          <RootRef
            rootRef={[Function]}
          >
            <WithStyles(Typography)
              aria-describedby="tooltip-icon"
              component="span"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <Typography
                align="inherit"
                aria-describedby="tooltip-icon"
                classes={
                  Object {
                    "alignCenter": "MuiTypography-alignCenter-105",
                    "alignJustify": "MuiTypography-alignJustify-107",
                    "alignLeft": "MuiTypography-alignLeft-104",
                    "alignRight": "MuiTypography-alignRight-106",
                    "body1": "MuiTypography-body1-101",
                    "body2": "MuiTypography-body2-100",
                    "button": "MuiTypography-button-103",
                    "caption": "MuiTypography-caption-102",
                    "colorError": "MuiTypography-colorError-115",
                    "colorInherit": "MuiTypography-colorInherit-111",
                    "colorPrimary": "MuiTypography-colorPrimary-112",
                    "colorSecondary": "MuiTypography-colorSecondary-113",
                    "colorTextSecondary": "MuiTypography-colorTextSecondary-114",
                    "display1": "MuiTypography-display1-96",
                    "display2": "MuiTypography-display2-95",
                    "display3": "MuiTypography-display3-94",
                    "display4": "MuiTypography-display4-93",
                    "gutterBottom": "MuiTypography-gutterBottom-109",
                    "headline": "MuiTypography-headline-97",
                    "noWrap": "MuiTypography-noWrap-108",
                    "paragraph": "MuiTypography-paragraph-110",
                    "root": "MuiTypography-root-92",
                    "subheading": "MuiTypography-subheading-99",
                    "title": "MuiTypography-title-98",
                  }
                }
                color="default"
                component="span"
                gutterBottom={false}
                headlineMapping={
                  Object {
                    "body1": "p",
                    "body2": "aside",
                    "display1": "h1",
                    "display2": "h1",
                    "display3": "h1",
                    "display4": "h1",
                    "headline": "h1",
                    "subheading": "h3",
                    "title": "h2",
                  }
                }
                noWrap={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                paragraph={false}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
                variant="body1"
              >
                <span
                  aria-describedby="tooltip-icon"
                  className="MuiTypography-root-92 MuiTypography-body1-101"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <WithStyles(Button)
                    className="own-polls"
                    color="primary"
                    disabled={false}
                    onClick={[MockFunction]}
                    size="small"
                    style={
                      Object {
                        "paddingBottom": 10,
                      }
                    }
                    variant="flat"
                  >
                    <Button
                      className="own-polls"
                      classes={
                        Object {
                          "colorInherit": "MuiButton-colorInherit-129",
                          "disabled": "MuiButton-disabled-134",
                          "fab": "MuiButton-fab-135",
                          "flatPrimary": "MuiButton-flatPrimary-126",
                          "flatSecondary": "MuiButton-flatSecondary-127",
                          "focusVisible": "MuiButton-focusVisible-133",
                          "fullWidth": "MuiButton-fullWidth-139",
                          "label": "MuiButton-label-125",
                          "mini": "MuiButton-mini-136",
                          "outlined": "MuiButton-outlined-128",
                          "raised": "MuiButton-raised-130",
                          "raisedPrimary": "MuiButton-raisedPrimary-131",
                          "raisedSecondary": "MuiButton-raisedSecondary-132",
                          "root": "MuiButton-root-124",
                          "sizeLarge": "MuiButton-sizeLarge-138",
                          "sizeSmall": "MuiButton-sizeSmall-137",
                        }
                      }
                      color="primary"
                      component="button"
                      disableFocusRipple={false}
                      disabled={false}
                      fullWidth={false}
                      mini={false}
                      onClick={[MockFunction]}
                      size="small"
                      style={
                        Object {
                          "paddingBottom": 10,
                        }
                      }
                      type="button"
                      variant="flat"
                    >
                      <WithStyles(ButtonBase)
                        className="MuiButton-root-124 MuiButton-flatPrimary-126 MuiButton-sizeSmall-137 own-polls"
                        component="button"
                        disabled={false}
                        focusRipple={true}
                        focusVisibleClassName="MuiButton-focusVisible-133"
                        onClick={[MockFunction]}
                        style={
                          Object {
                            "paddingBottom": 10,
                          }
                        }
                        type="button"
                      >
                        <ButtonBase
                          centerRipple={false}
                          className="MuiButton-root-124 MuiButton-flatPrimary-126 MuiButton-sizeSmall-137 own-polls"
                          classes={
                            Object {
                              "disabled": "MuiButtonBase-disabled-141",
                              "focusVisible": "MuiButtonBase-focusVisible-142",
                              "root": "MuiButtonBase-root-140",
                            }
                          }
                          component="button"
                          disableRipple={false}
                          disabled={false}
                          focusRipple={true}
                          focusVisibleClassName="MuiButton-focusVisible-133"
                          onClick={[MockFunction]}
                          style={
                            Object {
                              "paddingBottom": 10,
                            }
                          }
                          tabIndex="0"
                          type="button"
                        >
                          <button
                            className="MuiButtonBase-root-140 MuiButton-root-124 MuiButton-flatPrimary-126 MuiButton-sizeSmall-137 own-polls"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[MockFunction]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            style={
                              Object {
                                "paddingBottom": 10,
                              }
                            }
                            tabIndex="0"
                            type="button"
                          >
                            <span
                              className="MuiButton-label-125"
                            >
                               own your polls 
                            </span>
                            <WithStyles(TouchRipple)
                              center={false}
                              innerRef={[Function]}
                            >
                              <TouchRipple
                                center={false}
                                classes={
                                  Object {
                                    "child": "MuiTouchRipple-child-147",
                                    "childLeaving": "MuiTouchRipple-childLeaving-148",
                                    "childPulsate": "MuiTouchRipple-childPulsate-149",
                                    "ripple": "MuiTouchRipple-ripple-144",
                                    "ripplePulsate": "MuiTouchRipple-ripplePulsate-146",
                                    "rippleVisible": "MuiTouchRipple-rippleVisible-145",
                                    "root": "MuiTouchRipple-root-143",
                                  }
                                }
                              >
                                <TransitionGroup
                                  childFactory={[Function]}
                                  className="MuiTouchRipple-root-143"
                                  component="span"
                                  enter={true}
                                  exit={true}
                                >
                                  <span
                                    className="MuiTouchRipple-root-143"
                                  />
                                </TransitionGroup>
                              </TouchRipple>
                            </WithStyles(TouchRipple)>
                          </button>
                        </ButtonBase>
                      </WithStyles(ButtonBase)>
                    </Button>
                  </WithStyles(Button)>
                </span>
              </Typography>
            </WithStyles(Typography)>
          </RootRef>
        </Target>
        <Portal>
          <Portal
            containerInfo={
              <body>
                <div
                  class="app"
                  id="app"
                >
                  <div
                    class="MuiGrid-container-1 MuiGrid-direction-xs-column-4 MuiGrid-align-items-xs-center-9 MuiGrid-justify-xs-center-18 home-page"
                  >
                    <span
                      class="background-image"
                      style="background-image: url(www.google.com);"
                    >
                      <span
                        class="background-backdrop"
                      />
                    </span>
                    <div
                      class="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-sm-12-52 home-page-title grid-item"
                    >
                      <h1
                        class="MuiTypography-root-92 MuiTypography-headline-97 MuiTypography-colorInherit-111"
                      >
                        Welcome to Voting Redux!
                      </h1>
                    </div>
                    <div
                      class="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-sm-12-52 home-page-btn grid-item"
                    >
                      <div
                        aria-describedby="tooltip-icon"
                        class="MuiTypography-root-92 MuiTypography-body1-101"
                      >
                        <button
                          class="MuiButtonBase-root-140 MuiButton-root-124 MuiButton-raised-130 MuiButton-raisedPrimary-131 MuiButton-sizeLarge-138"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label-125"
                          >
                            Make a Poll
                          </span>
                          <span
                            class="MuiTouchRipple-root-143"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-sm-12-52 home-page-subtitle grid-item"
                    >
                      <h3
                        class="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                      >
                        or you can
                        <span
                          aria-describedby="tooltip-icon"
                          class="MuiTypography-root-92 MuiTypography-body1-101"
                          style="display: inline-block;"
                        >
                          <button
                            class="MuiButtonBase-root-140 MuiButton-root-124 MuiButton-flatPrimary-126 MuiButton-sizeSmall-137 own-polls"
                            style="padding-bottom: 10px;"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label-125"
                            >
                               own your polls 
                            </span>
                            <span
                              class="MuiTouchRipple-root-143"
                            />
                          </button>
                        </span>
                        or
                        <span
                          aria-describedby="tooltip-icon"
                          class="MuiTypography-root-92 MuiTypography-body1-101"
                          style="display: inline-block;"
                        >
                          <a
                            class="MuiButtonBase-root-140 MuiButton-root-124 MuiButton-flatPrimary-126 MuiButton-sizeSmall-137 view-polls flat"
                            href="/polls"
                            role="button"
                            style="padding-bottom: 10px;"
                            tabindex="0"
                          >
                            <span
                              class="MuiButton-label-125"
                            >
                               view polls
                            </span>
                            <span
                              class="MuiTouchRipple-root-143"
                            />
                          </a>
                        </span>
                      </h3>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiTooltip-popper-116"
                  style="position: absolute; pointer-events: none; opacity: 0; top: 0px; left: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
                    id="tooltip-icon"
                    role="tooltip"
                  />
                </div>
                <div
                  class="MuiTooltip-popper-116"
                  style="position: absolute; pointer-events: none; opacity: 0; top: 0px; left: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
                    id="tooltip-icon"
                    role="tooltip"
                  />
                </div>
                <div
                  class="MuiTooltip-popper-116"
                  style="position: absolute; pointer-events: none; opacity: 0; top: 0px; left: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
                    id="tooltip-icon"
                    role="tooltip"
                  />
                </div>
              </body>
            }
          >
            <Popper
              className="MuiTooltip-popper-116"
              component="div"
              eventsEnabled={false}
              modifiers={Object {}}
              placement="bottom"
              positionFixed={false}
            >
              <div
                className="MuiTooltip-popper-116"
                style={
                  Object {
                    "left": 0,
                    "opacity": 0,
                    "pointerEvents": "none",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <div
                  aria-hidden={true}
                  className="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
                  id="tooltip-icon"
                  role="tooltip"
                />
              </div>
            </Popper>
          </Portal>
        </Portal>
      </Manager>
    </Tooltip>
  </WithStyles(Tooltip)>
</Btn>
`;

exports[`<HomePage /> subtitle "view polls" Btn renders properly 1`] = `
<Btn
  className="view-polls"
  size="small"
  span={true}
  style={
    Object {
      "paddingBottom": 10,
    }
  }
  text=" view polls"
  to="/polls"
  variant="flat"
>
  <WithStyles(Tooltip)
    id="tooltip-icon"
    title=""
  >
    <Tooltip
      classes={
        Object {
          "open": "MuiTooltip-open-117",
          "popper": "MuiTooltip-popper-116",
          "tooltip": "MuiTooltip-tooltip-118",
          "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom-123",
          "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft-120",
          "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight-121",
          "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop-122",
          "touch": "MuiTooltip-touch-119",
        }
      }
      disableFocusListener={false}
      disableHoverListener={false}
      disableTouchListener={false}
      enterDelay={0}
      enterTouchDelay={1000}
      id="tooltip-icon"
      leaveDelay={0}
      leaveTouchDelay={1500}
      placement="bottom"
      theme={
        Object {
          "breakpoints": Object {
            "between": [Function],
            "down": [Function],
            "keys": Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ],
            "only": [Function],
            "up": [Function],
            "values": Object {
              "lg": 1280,
              "md": 960,
              "sm": 600,
              "xl": 1920,
              "xs": 0,
            },
            "width": [Function],
          },
          "direction": "ltr",
          "mixins": Object {
            "gutters": [Function],
            "toolbar": Object {
              "@media (min-width:0px) and (orientation: landscape)": Object {
                "minHeight": 48,
              },
              "@media (min-width:600px)": Object {
                "minHeight": 64,
              },
              "minHeight": 56,
            },
          },
          "overrides": Object {},
          "palette": Object {
            "action": Object {
              "active": "rgba(0, 0, 0, 0.54)",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "disabledBackground": "rgba(0, 0, 0, 0.12)",
              "hover": "rgba(0, 0, 0, 0.08)",
              "hoverOpacity": 0.08,
              "selected": "rgba(0, 0, 0, 0.14)",
            },
            "augmentColor": [Function],
            "background": Object {
              "default": "#fafafa",
              "paper": "#fff",
            },
            "common": Object {
              "black": "#000",
              "white": "#fff",
            },
            "contrastThreshold": 3,
            "divider": "rgba(0, 0, 0, 0.12)",
            "error": Object {
              "contrastText": "#fff",
              "dark": "#d32f2f",
              "light": "#e57373",
              "main": "#f44336",
            },
            "getContrastText": [Function],
            "grey": Object {
              "100": "#f5f5f5",
              "200": "#eeeeee",
              "300": "#e0e0e0",
              "400": "#bdbdbd",
              "50": "#fafafa",
              "500": "#9e9e9e",
              "600": "#757575",
              "700": "#616161",
              "800": "#424242",
              "900": "#212121",
              "A100": "#d5d5d5",
              "A200": "#aaaaaa",
              "A400": "#303030",
              "A700": "#616161",
            },
            "primary": Object {
              "contrastText": "#fff",
              "dark": "#303f9f",
              "light": "#7986cb",
              "main": "#3f51b5",
            },
            "secondary": Object {
              "contrastText": "#fff",
              "dark": "#c51162",
              "light": "#ff4081",
              "main": "#f50057",
            },
            "text": Object {
              "disabled": "rgba(0, 0, 0, 0.38)",
              "hint": "rgba(0, 0, 0, 0.38)",
              "primary": "rgba(0, 0, 0, 0.87)",
              "secondary": "rgba(0, 0, 0, 0.54)",
            },
            "tonalOffset": 0.2,
            "type": "light",
          },
          "props": Object {},
          "shadows": Array [
            "none",
            "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
            "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
            "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
            "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
            "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
            "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
            "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
            "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
            "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
            "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
            "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
            "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
            "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
            "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
          ],
          "spacing": Object {
            "unit": 8,
          },
          "transitions": Object {
            "create": [Function],
            "duration": Object {
              "complex": 375,
              "enteringScreen": 225,
              "leavingScreen": 195,
              "short": 250,
              "shorter": 200,
              "shortest": 150,
              "standard": 300,
            },
            "easing": Object {
              "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
              "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
              "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
            },
            "getAutoHeightDuration": [Function],
          },
          "typography": Object {
            "body1": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 400,
              "lineHeight": "1.46429em",
            },
            "body2": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "lineHeight": "1.71429em",
            },
            "button": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "textTransform": "uppercase",
            },
            "caption": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
              "lineHeight": "1.375em",
            },
            "display1": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.125rem",
              "fontWeight": 400,
              "lineHeight": "1.20588em",
            },
            "display2": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.8125rem",
              "fontWeight": 400,
              "lineHeight": "1.06667em",
              "marginLeft": "-.02em",
            },
            "display3": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "3.5rem",
              "fontWeight": 400,
              "letterSpacing": "-.02em",
              "lineHeight": "1.30357em",
              "marginLeft": "-.02em",
            },
            "display4": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "7rem",
              "fontWeight": 300,
              "letterSpacing": "-.04em",
              "lineHeight": "1.14286em",
              "marginLeft": "-.04em",
            },
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": 14,
            "fontWeightLight": 300,
            "fontWeightMedium": 500,
            "fontWeightRegular": 400,
            "headline": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.5rem",
              "fontWeight": 400,
              "lineHeight": "1.35417em",
            },
            "pxToRem": [Function],
            "round": [Function],
            "subheading": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
              "lineHeight": "1.5em",
            },
            "title": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.3125rem",
              "fontWeight": 500,
              "lineHeight": "1.16667em",
            },
          },
          "zIndex": Object {
            "appBar": 1100,
            "drawer": 1200,
            "mobileStepper": 1000,
            "modal": 1300,
            "snackbar": 1400,
            "tooltip": 1500,
          },
        }
      }
      title=""
    >
      <Manager
        tag={false}
      >
        <EventListener
          onResize={[Function]}
          target="window"
        />
        <Target>
          <RootRef
            rootRef={[Function]}
          >
            <WithStyles(Typography)
              aria-describedby="tooltip-icon"
              component="span"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <Typography
                align="inherit"
                aria-describedby="tooltip-icon"
                classes={
                  Object {
                    "alignCenter": "MuiTypography-alignCenter-105",
                    "alignJustify": "MuiTypography-alignJustify-107",
                    "alignLeft": "MuiTypography-alignLeft-104",
                    "alignRight": "MuiTypography-alignRight-106",
                    "body1": "MuiTypography-body1-101",
                    "body2": "MuiTypography-body2-100",
                    "button": "MuiTypography-button-103",
                    "caption": "MuiTypography-caption-102",
                    "colorError": "MuiTypography-colorError-115",
                    "colorInherit": "MuiTypography-colorInherit-111",
                    "colorPrimary": "MuiTypography-colorPrimary-112",
                    "colorSecondary": "MuiTypography-colorSecondary-113",
                    "colorTextSecondary": "MuiTypography-colorTextSecondary-114",
                    "display1": "MuiTypography-display1-96",
                    "display2": "MuiTypography-display2-95",
                    "display3": "MuiTypography-display3-94",
                    "display4": "MuiTypography-display4-93",
                    "gutterBottom": "MuiTypography-gutterBottom-109",
                    "headline": "MuiTypography-headline-97",
                    "noWrap": "MuiTypography-noWrap-108",
                    "paragraph": "MuiTypography-paragraph-110",
                    "root": "MuiTypography-root-92",
                    "subheading": "MuiTypography-subheading-99",
                    "title": "MuiTypography-title-98",
                  }
                }
                color="default"
                component="span"
                gutterBottom={false}
                headlineMapping={
                  Object {
                    "body1": "p",
                    "body2": "aside",
                    "display1": "h1",
                    "display2": "h1",
                    "display3": "h1",
                    "display4": "h1",
                    "headline": "h1",
                    "subheading": "h3",
                    "title": "h2",
                  }
                }
                noWrap={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                paragraph={false}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
                variant="body1"
              >
                <span
                  aria-describedby="tooltip-icon"
                  className="MuiTypography-root-92 MuiTypography-body1-101"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <WithStyles(Button)
                    className="view-polls flat"
                    color="primary"
                    component={[Function]}
                    disabled={false}
                    size="small"
                    style={
                      Object {
                        "paddingBottom": 10,
                      }
                    }
                    to="/polls"
                    variant="flat"
                  >
                    <Button
                      className="view-polls flat"
                      classes={
                        Object {
                          "colorInherit": "MuiButton-colorInherit-129",
                          "disabled": "MuiButton-disabled-134",
                          "fab": "MuiButton-fab-135",
                          "flatPrimary": "MuiButton-flatPrimary-126",
                          "flatSecondary": "MuiButton-flatSecondary-127",
                          "focusVisible": "MuiButton-focusVisible-133",
                          "fullWidth": "MuiButton-fullWidth-139",
                          "label": "MuiButton-label-125",
                          "mini": "MuiButton-mini-136",
                          "outlined": "MuiButton-outlined-128",
                          "raised": "MuiButton-raised-130",
                          "raisedPrimary": "MuiButton-raisedPrimary-131",
                          "raisedSecondary": "MuiButton-raisedSecondary-132",
                          "root": "MuiButton-root-124",
                          "sizeLarge": "MuiButton-sizeLarge-138",
                          "sizeSmall": "MuiButton-sizeSmall-137",
                        }
                      }
                      color="primary"
                      component={[Function]}
                      disableFocusRipple={false}
                      disabled={false}
                      fullWidth={false}
                      mini={false}
                      size="small"
                      style={
                        Object {
                          "paddingBottom": 10,
                        }
                      }
                      to="/polls"
                      type="button"
                      variant="flat"
                    >
                      <WithStyles(ButtonBase)
                        className="MuiButton-root-124 MuiButton-flatPrimary-126 MuiButton-sizeSmall-137 view-polls flat"
                        component={[Function]}
                        disabled={false}
                        focusRipple={true}
                        focusVisibleClassName="MuiButton-focusVisible-133"
                        style={
                          Object {
                            "paddingBottom": 10,
                          }
                        }
                        to="/polls"
                        type="button"
                      >
                        <ButtonBase
                          centerRipple={false}
                          className="MuiButton-root-124 MuiButton-flatPrimary-126 MuiButton-sizeSmall-137 view-polls flat"
                          classes={
                            Object {
                              "disabled": "MuiButtonBase-disabled-141",
                              "focusVisible": "MuiButtonBase-focusVisible-142",
                              "root": "MuiButtonBase-root-140",
                            }
                          }
                          component={[Function]}
                          disableRipple={false}
                          disabled={false}
                          focusRipple={true}
                          focusVisibleClassName="MuiButton-focusVisible-133"
                          style={
                            Object {
                              "paddingBottom": 10,
                            }
                          }
                          tabIndex="0"
                          to="/polls"
                          type="button"
                        >
                          <Link
                            className="MuiButtonBase-root-140 MuiButton-root-124 MuiButton-flatPrimary-126 MuiButton-sizeSmall-137 view-polls flat"
                            onBlur={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            replace={false}
                            role="button"
                            style={
                              Object {
                                "paddingBottom": 10,
                              }
                            }
                            tabIndex="0"
                            to="/polls"
                          >
                            <a
                              className="MuiButtonBase-root-140 MuiButton-root-124 MuiButton-flatPrimary-126 MuiButton-sizeSmall-137 view-polls flat"
                              href="/polls"
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              role="button"
                              style={
                                Object {
                                  "paddingBottom": 10,
                                }
                              }
                              tabIndex="0"
                            >
                              <span
                                className="MuiButton-label-125"
                              >
                                 view polls
                              </span>
                              <WithStyles(TouchRipple)
                                center={false}
                                innerRef={[Function]}
                              >
                                <TouchRipple
                                  center={false}
                                  classes={
                                    Object {
                                      "child": "MuiTouchRipple-child-147",
                                      "childLeaving": "MuiTouchRipple-childLeaving-148",
                                      "childPulsate": "MuiTouchRipple-childPulsate-149",
                                      "ripple": "MuiTouchRipple-ripple-144",
                                      "ripplePulsate": "MuiTouchRipple-ripplePulsate-146",
                                      "rippleVisible": "MuiTouchRipple-rippleVisible-145",
                                      "root": "MuiTouchRipple-root-143",
                                    }
                                  }
                                >
                                  <TransitionGroup
                                    childFactory={[Function]}
                                    className="MuiTouchRipple-root-143"
                                    component="span"
                                    enter={true}
                                    exit={true}
                                  >
                                    <span
                                      className="MuiTouchRipple-root-143"
                                    />
                                  </TransitionGroup>
                                </TouchRipple>
                              </WithStyles(TouchRipple)>
                            </a>
                          </Link>
                        </ButtonBase>
                      </WithStyles(ButtonBase)>
                    </Button>
                  </WithStyles(Button)>
                </span>
              </Typography>
            </WithStyles(Typography)>
          </RootRef>
        </Target>
        <Portal>
          <Portal
            containerInfo={
              <body>
                <div
                  class="app"
                  id="app"
                >
                  <div
                    class="MuiGrid-container-1 MuiGrid-direction-xs-column-4 MuiGrid-align-items-xs-center-9 MuiGrid-justify-xs-center-18 home-page"
                  >
                    <span
                      class="background-image"
                      style="background-image: url(www.google.com);"
                    >
                      <span
                        class="background-backdrop"
                      />
                    </span>
                    <div
                      class="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-sm-12-52 home-page-title grid-item"
                    >
                      <h1
                        class="MuiTypography-root-92 MuiTypography-headline-97 MuiTypography-colorInherit-111"
                      >
                        Welcome to Voting Redux!
                      </h1>
                    </div>
                    <div
                      class="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-sm-12-52 home-page-btn grid-item"
                    >
                      <div
                        aria-describedby="tooltip-icon"
                        class="MuiTypography-root-92 MuiTypography-body1-101"
                      >
                        <button
                          class="MuiButtonBase-root-140 MuiButton-root-124 MuiButton-raised-130 MuiButton-raisedPrimary-131 MuiButton-sizeLarge-138"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label-125"
                          >
                            Make a Poll
                          </span>
                          <span
                            class="MuiTouchRipple-root-143"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-sm-12-52 home-page-subtitle grid-item"
                    >
                      <h3
                        class="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                      >
                        or you can
                        <span
                          aria-describedby="tooltip-icon"
                          class="MuiTypography-root-92 MuiTypography-body1-101"
                          style="display: inline-block;"
                        >
                          <button
                            class="MuiButtonBase-root-140 MuiButton-root-124 MuiButton-flatPrimary-126 MuiButton-sizeSmall-137 own-polls"
                            style="padding-bottom: 10px;"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-label-125"
                            >
                               own your polls 
                            </span>
                            <span
                              class="MuiTouchRipple-root-143"
                            />
                          </button>
                        </span>
                        or
                        <span
                          aria-describedby="tooltip-icon"
                          class="MuiTypography-root-92 MuiTypography-body1-101"
                          style="display: inline-block;"
                        >
                          <a
                            class="MuiButtonBase-root-140 MuiButton-root-124 MuiButton-flatPrimary-126 MuiButton-sizeSmall-137 view-polls flat"
                            href="/polls"
                            role="button"
                            style="padding-bottom: 10px;"
                            tabindex="0"
                          >
                            <span
                              class="MuiButton-label-125"
                            >
                               view polls
                            </span>
                            <span
                              class="MuiTouchRipple-root-143"
                            />
                          </a>
                        </span>
                      </h3>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiTooltip-popper-116"
                  style="position: absolute; pointer-events: none; opacity: 0; top: 0px; left: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
                    id="tooltip-icon"
                    role="tooltip"
                  />
                </div>
                <div
                  class="MuiTooltip-popper-116"
                  style="position: absolute; pointer-events: none; opacity: 0; top: 0px; left: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
                    id="tooltip-icon"
                    role="tooltip"
                  />
                </div>
                <div
                  class="MuiTooltip-popper-116"
                  style="position: absolute; pointer-events: none; opacity: 0; top: 0px; left: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
                    id="tooltip-icon"
                    role="tooltip"
                  />
                </div>
              </body>
            }
          >
            <Popper
              className="MuiTooltip-popper-116"
              component="div"
              eventsEnabled={false}
              modifiers={Object {}}
              placement="bottom"
              positionFixed={false}
            >
              <div
                className="MuiTooltip-popper-116"
                style={
                  Object {
                    "left": 0,
                    "opacity": 0,
                    "pointerEvents": "none",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <div
                  aria-hidden={true}
                  className="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
                  id="tooltip-icon"
                  role="tooltip"
                />
              </div>
            </Popper>
          </Portal>
        </Portal>
      </Manager>
    </Tooltip>
  </WithStyles(Tooltip)>
</Btn>
`;

exports[`<HomePage /> title renders properly 1`] = `
<h1
  className="MuiTypography-root-92 MuiTypography-headline-97 MuiTypography-colorInherit-111"
>
  Welcome to Voting Redux!
</h1>
`;
